Finished Exercise for  Simply Zesty

--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -10,7 +10,8 @@
 
 @Model.Value("body")
 
-
+<h2>Weather Information</h2>
+Belfast
 @{
     string latitude = "54.607868";
     string longitude = "-5.926437";
