--- a/Views/Master.cshtml
+++ b/Views/Master.cshtml
@@ -11,7 +11,8 @@
         </style>
     </head>
     <body>
-        <nav><strong><a href="/">Home</a> | <a href="/news?page=1">News</a></strong></nav>
+        <nav><strong><a href="/">Home</a> | <a href="/news?page=1">News</a>| <a href="/staff-listings?page=1">Staff Listings</a>  
+        </strong></nav>
         
         @RenderBody()
         
