--- a/Views/NewsListing.cshtml
+++ b/Views/NewsListing.cshtml
@@ -1,6 +1,5 @@
 ﻿@using Umbraco.Cms.Web.Common.PublishedModels;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.NewsListing>
-@using testc= Umbraco.Cms.Web.Common.UmbracoContext;
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 @using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
@@ -10,7 +9,7 @@
 
 <h1>@Model.Value("title")</h1>
 @{
-    var pageSize = 1; // Set the number of items per page
+    var pageSize = 2; // Set the number of items per page
     var currentPage = HttpContextAccessor.HttpContext.Request.Query["page"];
     var items = Umbraco.ContentAtRoot().FirstOrDefault()
              .DescendantsOfType("newsArticle")
@@ -34,14 +33,17 @@
     @foreach (var item in pagedItems)
     {
         var settings = Umbraco.Content(1075);
+        var articleDate =(DateTime) @item.Value("date");
+      
+     
         <li>
-            @settings.Value("newsArticleLabel"): <a href="@item.Url()">@item.Name()</a> - @item.Value("date")
-
-        </li>
+            @settings.Value("newsArticleLabel"): <a href="@item.Url()">@item.Name()</a> - @articleDate.ToString("d MMMM yyyy")
+       </li>
 
     }
 </ul>
 
+<h2>Pages</h2>
 <!-- Pagination Links -->
 @if (totalPages > 1)
 {
@@ -52,4 +54,4 @@
         }
     </div>
 }
-    }
+ 
